test/libsolidity/syntaxTests/structs/global_struct_contract_name_clash.sol
struct S { uint256 a; }
contract S {}
// ----
// DeclarationError: (24-37): Identifier already declared.
